--- a/package.json
+++ b/package.json
@@ -21,5 +21,17 @@
   "bugs": {
     "url": "https://github.com/adamdry/fs-promisified-ts/issues"
   },
-  "homepage": "https://github.com/adamdry/fs-promisified-ts#readme"
+  "homepage": "https://github.com/adamdry/fs-promisified-ts#readme",
+  "dependencies": {
+    "bluebird": "^3.5.1"
+  },
+  "devDependencies": {
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.3",
+    "@types/bluebird": "^3.5.18",
+    "@types/node": "^8.0.50",
+    "ts-node": "^3.3.0"
+  }
 }
