--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "fs-promisified-ts",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Node's fs module promisified using Bluebird, with proper TypeScript support",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp",
+    "tslint": "tslint --project tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -26,12 +28,12 @@
     "bluebird": "^3.5.1"
   },
   "devDependencies": {
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.1",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.2.3",
     "@types/bluebird": "^3.5.18",
     "@types/node": "^8.0.50",
-    "ts-node": "^3.3.0"
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.2.3",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "^2.6.1"
   }
 }
